public interface Adivinable {

    boolean adivinarCasilla(Casilla casilla);

    boolean ganado();
}
