public interface Agotable {
    void agotar();
    boolean estaAgotado();

    /*
        METODOS TEST
     */
    int obtenerOportunidadesTest();


}
