interface Casilla {

    boolean estaDentro(String texto);

    String obtenerValor();
}
